@@ -1,5 +1,6 @@
-import sbtcrossproject.CrossPlugin.autoImport.{crossProject, CrossType}
+import sbtcrossproject.CrossPlugin.autoImport.{CrossType, crossProject}
 import scalanativecrossproject.ScalaNativeCrossPlugin.autoImport.*
+
 import scala.scalanative.build.*
 import scala.sys.process.Process
 
@@ -185,7 +186,7 @@ lazy val eruCore = crossProject(JVMPlatform, NativePlatform)
     testFrameworks += new TestFramework("munit.Framework"),
     nativeConfig ~= { c =>
       c.withLTO(LTO.full)
-        .withMode(Mode.releaseFast)
+        .withMode(scala.scalanative.build.Mode.releaseFast)
         .withGC(GC.immix)
     },
     // Make native compilation more visible
@@ -215,10 +216,10 @@ lazy val eruRuntime = crossProject(JVMPlatform, NativePlatform)
     Test / testForkedParallel := false,
     Test / fork := true,
     Test / javaOptions ++= Seq(
-      "-Xms1G",
-      "-Xmx2G",
-      "-XX:+UseG1GC",
-      "-XX:MaxGCPauseMillis=200",
+      "-XX:+UseZGC", // Enable ZGC (optimal for Project Loom)
+      "-XX:+ZGenerational", // Enable generational mode (Java 21+)
+      "-Xms2G", // Initial heap size
+      "-Xmx2G", // Max heap size
       "-Djava.util.concurrent.ForkJoinPool.common.parallelism=4"
     )
   )
